Implement ETL process for store data and improve data cleaning procedures
- Added ETL process to extract, clean, and load store data from an API
- Updated the main script to handle user, card, and store data
- Enhanced data cleaning methods in the DataCleaning class to handle various cleaning tasks
- Fixed issues with handling missing values and type conversions
- Standardized address and country code formats
- Improved error handling and logging for data conversion processes
- Updated configuration to securely handle API keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 db_creds_rds.yaml
 db_creds_local.yaml
 config.py
+
 __pycache__/
 
+cleaned_card_data.csv
+cleaned_stores_data.csv
+cleaned_stores_data_sample.csv
+cleaned_user_data.csv
+sample_df_pre_clean.csv
+test_clean_stores_data.py
+test_retrieve_and_inspect_stores_data.py
