Developed product data extraction and cleaning process in data_cleaning.py script & updated main.py script:
- Added method  in  class to normalize and convert product weights to kilograms, and defined a helper method in order to separate tasks. The method handles various formats including 'kg', 'g', 'ml', and 'num x num unit'.
- Included logic to clean up weight strings by removing non-numeric characters and trailing dots.
- Ensured conversion handles weights like '12 x 100g' appropriately by multiplying quantity with unit weight.
- Updated  to integrate product data extraction from S3 and weight conversion.
- Added logging in  to confirm successful extraction, conversion, and uploading of product data.
- Dropped rows with NaN values in critical columns like 'EAN' and 'date_added' before weight conversion.
- Moved configuration variables into config.py (including API keys, links, URIs, etc.) and imported them into the main script instead of hardcoding.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ cleaned_user_data.csv
 sample_df_pre_clean.csv
 test_clean_stores_data.py
 test_retrieve_and_inspect_stores_data.py
+products.csv
+cleaned_product_data.csv
