Refactor and optimize ETL scripts for improved readability and maintainability
- Refactored main.py to enhance readability, maintainability, and adherence to best practices
  - Consolidated repetitive code into reusable functions
  - Added meaningful variable and function names
  - Used type annotations and docstrings for better clarity
  - Improved error handling and logging
  - Implemented Single Responsibility Principle (SRP)
  - Ensured proper use of access modifiers and minimized the use of self
  - Organized import statements consistently

- Updated data_extraction.py:
  - Added type annotations and docstrings
  - Ensured consistent error handling and logging
  - Improved method names for clarity
  - Refactored data extraction methods for better readability and efficiency

- Updated data_cleaning.py:
  - Added type annotations and docstrings
  - Improved method names for clarity
  - Ensured consistent data cleaning steps and error handling

- Updated database_utils.py:
  - Added type annotations and docstrings
  - Ensured correct handling of both RDS and local database credentials
  - Improved database connection initialization for better clarity and maintainability

- Updated README.md:
  - Reflects the changes made during the refactoring and optimization process
  - Enhanced documentation of installation and usage instructions
  - Detailed the lessons learned during the project

- Added .gitignore entries for sensitive files and directories

This commit enhances the overall structure, readability, and maintainability of the ETL scripts, ensuring a more robust and efficient data pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ test_clean_stores_data.py
 test_retrieve_and_inspect_stores_data.py
 products.csv
 cleaned_product_data.csv
+cleaned_orders_data.csv
+cleaned_date_events_df.csv
