--- a/Milestone 2 Tasks/.gitignore
+++ b/Milestone 2 Tasks/.gitignore
@@ -3,6 +3,10 @@ db_creds_local.yaml
 config.py
 
 __pycache__/
+__pycache__/config.cpython-312.pyc
+__pycache__/data_cleaning.cpython-312.pyc
+__pycache__/data_extraction.cpython-312.pyc
+__pycache__/database_utils.cpython-312.pyc
 
 cleaned_card_data.csv
 cleaned_stores_data.csv
@@ -15,3 +19,4 @@ products.csv
 cleaned_product_data.csv
 cleaned_orders_data.csv
 cleaned_date_events_df.csv
+testing_data_cleaning_and_upload.ipynb
